# ChatGLM-API

./: Makefile  api.py  docker-compose.yml  requirements.txt
examples/: curl.sh
python/: Dockerfile  pyproject.toml
scripts/: convert-models.sh
