[tool.poetry]
name = "chatglm-api"
version = "0.1.0"
description = "The OpenAI compatible API for ChatGLM"
authors = ["Nicolas Wang <chaoqingwang.nick@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatglm_api"}]

[tool.poetry.dependencies]
python = "^3.10"
chatglm-cpp = "^0.2.1"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
sse-starlette = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
